# project-vr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
latex/: .gitignore  latexmkrc  master.tex
resources/3dobj/: sphere_smooth.mtl
resources/shaders/: bullet_debug.frag  bullet_debug.geom  cubemap.frag  cubemap.vert  depth.frag  depth.vert  f_shader.glsl  light.frag  light.vert  light_debug.frag  painting.frag  painting.vert  post.frag  post.vert  rabbit.frag  rabbit.vert  smoke.frag  smoke.geom  smoke.vert  v_shader.glsl
src/: glad.c
src/components/: Camera.h  CollisionObject.cpp  CollisionObject.h  DeltaTime.h  DirLight.h  FollowedByCamera.h  GameStateGlobals.h  Light.h  Material.h  PointLight.h  Position.h  Renderable.h  RotateAnimation.h  ShortLivedObject.h
src/engine/: AssetManager.cpp  AssetManager.h  Mesh.cpp  Mesh.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h
src/prefabs/: CameraPrefab.cpp  CameraPrefab.h  CubeMapPrefab.cpp  CubeMapPrefab.h  CubePrefab.cpp  CubePrefab.h  DirLightPrefab.cpp  DirLightPrefab.h  EnvironmentPrefab.cpp  EnvironmentPrefab.h  LightCubePrefab.cpp  LightCubePrefab.h  LightScreenPrefab.cpp  LightScreenPrefab.h  PaintingPrefab.cpp  PaintingPrefab.h  PlayerPrefab.cpp  PlayerPrefab.h  PointLightPrefab.cpp  PointLightPrefab.h  RabbitPrefab.cpp  RabbitPrefab.h  SmokePrefab.cpp  SmokePrefab.h  SpotLightPrefab.cpp  SpotLightPrefab.h  Table.cpp  Table.h  TablePrefab.cpp  ThrowableBulletPrefab.cpp  ThrowableBulletPrefab.h
src/scenes/: Scene.cpp  Scene.h
src/systems/: CameraSystem.cpp  CameraSystem.h  DestroyFallOutOfWorldSystem.cpp  DestroyFallOutOfWorldSystem.h  DrawSystem.cpp  DrawSystem.h  InputUpdaterSystem.cpp  InputUpdaterSystem.h  LightSystem.cpp  LightSystem.h  RotateSystem.cpp  RotateSystem.h  ThrowableBulletShooterSystem.cpp  ThrowableBulletShooterSystem.h  ViewportUpdateSystem.cpp  ViewportUpdateSystem.h  bulletDebugDraw.cpp  bulletDebugDraw.h  bulletSystem.cpp  bulletSystem.h  lightDebugDraw.cpp  lightDebugDraw.h
